# pkg-example

./: LICENSE  README.md  setup.cfg  setup.py
docs/: pypi-publish.md
scripts/: calc
src/pkg_example/: calculator_module.py
tests/: test_calculator_module.py
