[metadata]
name = pkg-example
version = 0.1b1
license = MIT
license_files = LICENSE
url = https://github.com/cdt-data-science/pkg-example
author = James Owers
author_email = james.f.owers@gmail.com
keywords = template python-packaging best-practice
description = An example python package as a starter for good research code.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: MIT
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
install_requires =
    black
    fire
    ipython
    pylint
    pytest
setup_requires =
    pytest-runner
tests_require =
    pytest
packages = find:
package_dir =
    =src
scripts =
    scripts/calc

[options.extras_require]
dev =
    twine

[options.packages.find]
where = src

[bdist_wheel]
universal = 0

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
pythonfiles = test_*.py
